--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.min";
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url("~bootstrap/dist/css/bootstrap.min.css");
+@import url("~@angular/material/prebuilt-themes/indigo-pink.css");
 @import "assets/sass-utils";
 
 @font-face {
