--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
     <div class="header text-center">
       <h1 class="font-gordita-medium">Your account</h1>
       <h6>Tell us a little more about yourself</h6>
+      <div class="user-badge d-flex align-items-center">
+        <div class="name">Giselle</div>
+        <div class="pic"></div>
+      </div>
     </div>
     <div class="d-flex justify-content-center">
       <div class="form-container" *ngIf="tab === 'personal'">
